Correction du bug d'affichage 'overflow-x' sur mobile

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -45,6 +45,7 @@ $grid-breakpoints: (
 html,
 body {
   overflow-x: hidden;
+  position: relative;
 }
 body {
   width: 100vw;
