--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,7 @@ table {
 html,
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
 body {
